// Copyright (c) The dgc.network
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

// A contract registry is stored using the name of the contract, with the
// following address:
//
//   00ec01 + hash(name)
//
// The stored contents are a serialized ContractRegistryList message to handle
// hash collisions.

message ContractRegistry {
  message Version {
    string version = 1;

    // used to verify a contract is same as the one the client intended to
    // invoke
    string contract_sha512 = 2;

    // for client information purposes only - the key that created this
    // contract on the chain
    string creator = 3;
  }

  string name = 1;
  repeated Version versions = 2;
  repeated string owners = 3;
}

message ContractRegistryList {
  repeated ContractRegistry registries = 1;
}
