// Copyright (c) The dgc.network
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

// A namespace registry is stored using the namespace, prefixed with zero
// padding:
//
//   00ec00 + hash(substr(namespace, 6))
//
// The stored contents are a serialized NamespaceRegistryList message to handle
// hash collisions.
//
// Creating a namespace registry requires being in the setting for
// 'sawtooth.swa.administrators' (a list of public keys).
//
// Once created, only an owner or a member of the sawtooth.swa.administrators
// can modify the registry entry.

message NamespaceRegistry {
  message Permission {
    string contract_name = 1;
    bool read = 2;
    bool write = 3;
  }

  string namespace = 1;
  repeated string owners = 2;

  repeated Permission permissions = 3;
}

message NamespaceRegistryList {
  repeated NamespaceRegistry registries = 1;
}
