// Copyright (c) The dgc.network
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

message SmartPermission {
  string name = 1;
  string org_id = 2;
  bytes function = 3;
}

message SmartPermissionList {
  repeated SmartPermission smart_permissions = 1;
}
